--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,43 @@
+appdirs==1.4.4
+beautifulsoup4==4.12.2
+bs4==0.0.1
 certifi==2023.5.7
 charset-normalizer==3.2.0
+colorama==0.4.6
+contourpy==1.1.0
+cssselect==1.2.0
+cycler==0.11.0
+fake-useragent==1.1.3
+fonttools==4.41.1
 gitdb==4.0.10
 GitPython==3.1.30
 idna==3.4
+importlib-metadata==6.8.0
+kiwisolver==1.4.4
 lizard==1.17.10
+lxml==4.9.3
+matplotlib==3.7.2
+numpy==1.25.1
+packaging==23.1
+pandas==2.0.3
+parse==1.19.1
+Pillow==10.0.0
 PyDriller==2.5
+pyee==8.2.2
+pyparsing==3.0.9
+pyppeteer==1.0.2
+pyquery==2.0.0
+python-dateutil==2.8.2
 pytz==2023.3
 requests==2.31.0
+requests-html==0.10.0
+six==1.16.0
 smmap==5.0.0
+soupsieve==2.4.1
+tqdm==4.65.0
 types-pytz==2023.3.0.0
-urllib3==2.0.3
+tzdata==2023.3
+urllib3==1.26.16
+w3lib==2.1.1
+websockets==10.4
+zipp==3.16.2
