--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .importer/
 **/__pycache__/*
 src/__pycache__/
+.idea/
 nohup.out
 *data*.csv
+src/ui/large_paper_repos.csv
+src/ui/large_scale_paper_codecov_result.csv
+src/ui/large_scale_paper_coveralls_result.csv
